--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -75,7 +75,7 @@
       <div class="section">
         <div class="container">
           <% if (selectedTable && Object.keys(availableSlots).length > 0) {%>
-          <h2 class="center"><%= selectedTable.tablename %></h2>
+          <h2 class="center m-b-0"><%= selectedTable.tablename %></h2>
           <div class="selected-table-container">
             <div class="selected-table-content-container">
               <img
