--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -17,7 +17,8 @@
         justify-content: center;
       }
       .card {
-        background: #f0bd7ac5;
+        background-image: url(/images/cardBackground.jpg);
+        background-size: cover;
         border: 1px solid #ddd;
         border-radius: 8px;
         width: 300px;
