--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,12 @@
       rel="stylesheet"
     />
   </head>
+  <style>
+    body{
+      background-image: url(/images/asfalt-dark.png);
+      background-color: #f0bd7a5c;
+    }
+  </style>
   <body>
     <div class="hero">
       <div class="nav-bar-hero"><%- include('partials/header') %></div>
