--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,22 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Startseite</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Parisienne&family=Updock&display=swap"
-      rel="stylesheet"
-    />
   </head>
-  <style>
-    body{
-      background-image: url(/images/asfalt-dark.png);
-      background-color: #f0bd7a5c;
-    }
-  </style>
-  <body>
+  <body class="index-body">
     <div class="hero">
       <div class="nav-bar-hero"><%- include('partials/header') %></div>
       <div class="container">
@@ -99,7 +85,7 @@
               einem authentischen historischen Rahmen auszurichten.
             </p>
             <div class="contant-buttons">
-              <a href="/blog" class="blog-button">Veranstaltungen</a>
+              <a href="/eventbuchung" class="blog-button">Eventplaner</a>
             </div>
           </div>
           <div class="img-container last right-image flex_einfliegen">
