--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,7 @@
       <div>
         <h4>Funktionen</h4>
         <a href="/reservation">Tisch Reservierung</a>
-        <a href="/event">Event Buchung</a>
+        <a href="/eventbuchung">Event Buchung</a>
         <a href="/blog">Veranstaltungen</a>
       </div>
       <div>
@@ -32,7 +32,7 @@
   <div class="second-row">
     <div class="flex-row">
       <div>
-        <p>© Zur alten Backstube 2025</p>
+        <p>© Zur alten Backstube <%= new Date().getFullYear() %></p>
       </div>
       <div class="right-footer end-footer">
         <a href="/impressum">Impressum</a>
