--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -20,6 +20,7 @@
       flex: 1;
     }
     .image-containers img {
+      max-height: 400px;
       width: 500px;
       object-fit: contain;
     }
