--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -11,6 +11,8 @@
   <body>
     <div class="section">
       <%- include('partials/header') %>
+      <h2 class="center">Getränkekarte</h2>
+
       <div class="menu-container">
         <% categories.forEach(category => { %>
         <div class="menu-card" data-category="<%= category.mainCategory %>">
