--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
           <div class="lower-hero">
             <p class="hero-text p-hero">Seit 1863</p>
             <h3 class="hero-text">Familie Ziekow in 5. Generation</h3>
-            <a href="/reservation" class="reservation-button"
+            <!-- <a href="/reservation" class="reservation-button"
               >Tischreservierung</a
-            >
+            > -->
           </div>
         </div>
       </div>
