--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,8 @@
   <div class="first-row">
     <div class="left-footer">
       <div>
-        <h4>LOGO</h4>
-        <p>Webseite meines Kaffees in Rosenthal - Berlin</p>
+        <!-- <h4>LOGO</h4>
+        <p>Webseite meines Kaffees in Rosenthal - Berlin</p> -->
       </div>
     </div>
     <div class="right-footer">
@@ -14,7 +14,7 @@
       </div>
       <div>
         <h4>Funktionen</h4>
-        <a href="/reservation">Tisch Reservierung</a>
+        <!-- <a href="/reservation">Tisch Reservierung</a> -->
         <a href="/eventbuchung">Event Buchung</a>
         <a href="/blog">Veranstaltungen</a>
       </div>
