--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@ rel="stylesheet"
         <a href="/eventbuchung">Feier buchen</a>
         <a href="/geschichte">Geschichte</a>
         <a href="/blog">Veranstaltungen</a>
-        <a href="/reservation" class="reserve-button">Reservierung</a>
+        <!-- <a href="/reservation" class="reserve-button">Reservierung</a> -->
       </div>
     </div>
   </div>
