changed landing page to webp

--- a/public/styles.css
+++ b/public/styles.css
@@ -96,7 +96,7 @@ input[type="text"], input[type="email"], select {
 }
 
 .index-body{
-  background-image: url(/images/asfalt-dark.png);
+  background-image: url(/images/asfalt-dark.webp);
   background-color: #f0bd7a5c;
 }
 
