--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,22 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Willkommen in der alten Backstube – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Karte">
     <title>Startseite</title>
     <link rel="stylesheet" href="/styles.css" />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7KCV3QVBP7"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-7KCV3QVBP7");
-    </script>
   </head>
   <body class="index-body">
     <div class="hero">
@@ -54,7 +41,7 @@
           </div>
           <div class="img-container right-image flex_einfliegen">
             <img
-              src="/images/EingangmitSchrift.png"
+              src="/images/EingangmitSchrift.webp"
               alt="Eingangsbereich heute"
             />
           </div>
@@ -65,7 +52,7 @@
       <div class="container">
         <div class="flex-space-between flex-reverse">
           <div class="img-container left-image flex_einfliegen">
-            <img src="/images/2024-03-05.png" alt="Eingangsbereich heute" />
+            <img src="/images/2024-03-05.webp" alt="Eingangsbereich heute" />
           </div>
           <div class="main-content">
             <h3>Tradition im Wandel</h3>
@@ -103,7 +90,7 @@
             </div>
           </div>
           <div class="img-container last right-image flex_einfliegen">
-            <img src="/images/2024-07-22.png" alt="Eingangsbereich heute" />
+            <img src="/images/2024-07-22.webp" alt="Eingangsbereich heute" />
           </div>
         </div>
       </div>
