changed header, footer and index so its better loading for the web

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <meta name="description" content="Willkommen in der alten Backstube – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Karte">
     <title>Startseite</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="preload" as="image" href="/images/landingimage.WEBP" type="image/webp">
   </head>
   <body class="index-body">
     <div class="hero">
@@ -15,7 +16,7 @@
           <div><h1 class="hero-heading">Zur alten Backstube</h1></div>
           <div class="lower-hero">
             <p class="hero-text p-hero">Seit 1863</p>
-            <h3 class="hero-text">Familie Ziekow in 5. Generation</h3>
+            <h2 class="hero-text">Familie Ziekow in 5. Generation</h2>
             <!-- <a href="/reservation" class="reservation-button"
               >Tischreservierung</a
             > -->
