--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,8 +9,8 @@
     <div class="right-footer">
       <div>
         <h4>Unternehmen</h4>
-        <a>Über Uns</a>
-        <a>Kontakt</a>
+        <a href="/impressum">Über Uns</a>
+        <a href="/impressum">Kontakt</a>
       </div>
       <div>
         <h4>Funktionen</h4>
