--- a/views/datenschutz.ejs
+++ b/views/datenschutz.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Datenschutz</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Erfahren Sie, wie wir Ihre Daten schützen. Unsere Datenschutzerklärung informiert transparent über Erhebung, Nutzung und Sicherheit Ihrer Informationen.">
   </head>
   <body>
     <div class="section">
