--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geschichte</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Die Enstehungsgeschichte der alten Backstube. Uns gibt es bereits seit 1863. 5. Generation Familie Ziekow">
   </head>
   <style>
     .split-area {
