--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Getränkekarte</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Getränkekarte zur alten Backstube. Hier findest du alle Getränke, welche in unserer Backstube angeboten werden.">
     <!-- Include jQuery from CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
