--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AGB</title>
+    <meta name="description" content="Informieren Sie sich über unsere Allgemeinen Geschäftsbedingungen – alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
