--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= post.heading %></title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Hier findest du den Blog zum Thema: <%= post.heading %>">
+
     <style>
       .main-image {
         width: 100%;
