--- a/views/eventbuchung.ejs
+++ b/views/eventbuchung.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventbuchung</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Plane dein Event bei uns. Ob Hochzeit, Firmenfeier, Geburtstag, Beerdigung oder sonstige Veranstaltungen. Wir machen es möglich. Veranstaltung - Location - Eventplanung">
   </head>
   <body>
     <div class="section">
