--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Impressum</title>
     <link rel="stylesheet" href="/styles.css" />
+    <meta name="description" content="Impressum: Alle rechtlichen Informationen zu Zur Alten Backstube. Hier finden Sie Kontaktangaben, Verantwortlichkeiten und weitere wichtige Details.">
   </head>
   <body>
     <div class="section">
