--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Willkommen in der alten Backstube – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Karte">
-    <title>Startseite</title>
+    <meta name="description" content="Willkommen in der alten Backstube – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte">
+    <title>Startseite - Zur alten Backstube</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="preload" as="image" href="/images/landingimage.WEBP" type="image/webp">
   </head>
