--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tisch Reservierung</title>
+    <meta name="description" content="Tischreservierung zur alten Backstube. Hier kannst du einen Tisch für Samstag oder Sonntag reservieren. Buchung - Reservierung - Reservierung Café">
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body class="loading">
