--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Willkommen in der alten Backstube – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte">
-    <title>Startseite - Zur alten Backstube</title>
+    <meta name="description" content="Willkommen in der alten Backstube Rosenthal – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte">
+    <title>Startseite - Zur alten Backstube Berlin</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="preload" as="image" href="/images/landingimage.WEBP" type="image/webp">
   </head>
@@ -30,7 +30,7 @@
           <div class="main-content">
             <h3>Unsere Historie</h3>
             <p>
-              Bereits Anfang des 20. Jahrhunderts wurde unser traditionsreiches
+              Bereits 1863 wurde unser traditionsreiches
               Kaffeehaus ins Leben gerufen – ein Ort, der seit jeher
               Begegnungen, Inspiration und Genuss miteinander verbindet. In
               seinen ehrwürdigen Räumen, geschmückt mit antiken Möbeln und
