added a cookie banner to the footer area

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Willkommen in der alten Backstube Rosenthal – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte">
+    <meta
+      name="description"
+      content="Willkommen in der alten Backstube Rosenthal – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte"
+    />
     <title>Startseite - Zur alten Backstube Berlin</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="preload" as="image" href="/images/landingimage.WEBP" type="image/webp">
+    <link
+      rel="preload"
+      as="image"
+      href="/images/landingimage.WEBP"
+      type="image/webp"
+    />
   </head>
   <body class="index-body">
     <div class="hero">
@@ -30,14 +38,13 @@
           <div class="main-content">
             <h3>Unsere Historie</h3>
             <p>
-              Bereits 1863 wurde unser traditionsreiches
-              Kaffeehaus ins Leben gerufen – ein Ort, der seit jeher
-              Begegnungen, Inspiration und Genuss miteinander verbindet. In
-              seinen ehrwürdigen Räumen, geschmückt mit antiken Möbeln und
-              liebevoll restaurierten Details, spürt man den Hauch vergangener
-              Zeiten. Generationen von Gästen haben hier ihre Geschichten
-              geschrieben, und die ursprüngliche Leidenschaft der Gründer lebt
-              in jedem Winkel fort.
+              Bereits 1863 wurde unser traditionsreiches Kaffeehaus ins Leben
+              gerufen – ein Ort, der seit jeher Begegnungen, Inspiration und
+              Genuss miteinander verbindet. In seinen ehrwürdigen Räumen,
+              geschmückt mit antiken Möbeln und liebevoll restaurierten Details,
+              spürt man den Hauch vergangener Zeiten. Generationen von Gästen
+              haben hier ihre Geschichten geschrieben, und die ursprüngliche
+              Leidenschaft der Gründer lebt in jedem Winkel fort.
             </p>
           </div>
           <div class="img-container right-image flex_einfliegen">
